--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -68,6 +68,10 @@
   @media only screen and (max-width: 730px) {
     width: 50%;
   }
+
+  @media only screen and (max-width: 550px) {
+    width: 60%;
+  }
 }
 
 .dropdown {
